# sports_arbitrage

./: .gitignore  README.md  arb_engine.py  odds_collector.py  prices.csv  pyproject.toml
src/app/: arbscan.py
src/cli/: main.py
src/domain/: arb.py
src/infra/: logger.py
src/ingestion/http/: backoff.py
src/ingestion/providers/: odds_api.py
src/sparb/: __init__.py
src/sparb/app/: arbscan.py
src/sparb/cli/: main.py
src/sparb/config/: settings.py
src/sparb/domain/: arb.py  models.py
src/sparb/infra/: logger.py
src/sparb/ingestion/http/: backoff.py
src/sparb/ingestion/providers/: odds_api.py
src/sparb/scripts/: odds_collector.py
